@@ -5,25 +5,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.0'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0'
+        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22'
     }
 }
 
-// Add this to help with JDK image issues
 allprojects {
-    tasks.withType(JavaCompile).configureEach {
-        options.fork = true
-        options.forkOptions.jvmArgs += [
-            '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
-        ]
-    }
-    
     repositories {
         google()
         mavenCentral()
